# SingleInclude

./: .clang-format  CMakeLists.txt  README.md  main.cpp
